# -project-recorder

./: README.md  third_party
VoiceApplication/app/src/main/java/voice/example/com/myapplication/: ActivityPresenterImpl.java  MainActivity.java
VoiceApplication/app/src/main/res/values/: dimens.xml
linux/: do_build.sh
linux/install/simulator/dsp_config/: fix_bf_2_006_weight.txt  uplink.cfg
linux/mobvoi/: tts_synthesizer.h
linux/mobvoi/dm/dialogue/: context_manager.h  ioadaptor.h  language_generator.h  language_template.h  language_template_lexer.h  pack_engine.h  pack_task.h  plugin_loader.h  session.h  task.h  task_manager.h  tcp_engine.h  tcp_task_instance.h  turn.h
linux/mobvoi/dm/interface/: input.h  pack_plugin.h  plugin.h  plugin_helper.h  slot.h  test_pack_plugin.h
linux/mobvoi/lg/lg/: lg_chunks.h  lg_conditions.h  lg_filled_response.h  lg_host.h  lg_resource.h  lg_responses.h  lg_rules.h
linux/mobvoi/lg/lg_interface/: address.h  geocoding.h  lu_result.h  taskframe.h  turn_input.h
linux/platform/jpcc/inc/: ChangeHistory.txt  ISpeechSDS.h
linux/src/: main.cc
linux/src/ecnr/: ecnr.cc
linux/src/recorder/: events.cc
linux/utils/config/: speech_config.cc
linux/utils/log/blog/: blog.h
linux/utils/log/log_impl/: log_impl.h
src/VoiceApplication/app/src/main/res/layout/: content_main.xml
src/linux/: CMakeLists.txt
src/linux/mobvoi/: mobvoi_dsp.h  recognizer.h  speech_sdk.h  utils.h
src/linux/mobvoi/dm/dialogue/: boolean_expression.h  dialogue.h  pack_task_instance.h  parameter.h  parameter_instance.h  resolver.h  response.h  serializer.h  task_base.h  task_header.h  task_instance.h  tcp_task.h  trigger.h
src/linux/mobvoi/dm/interface/: action.h  context.h  lg_result.h  lu_result.h  semantic_frame.h
src/linux/mobvoi/lg/: lg_wrapper.h
src/linux/mobvoi/lg/lg/: lg_appbase.h  lg_appmanager.h  lg_appproxy.h  lg_common.h  lg_context.h  lg_default_app.h  lg_engine.h  lg_input.h  lg_manifest.h  lg_settings.h  lg_variable.h  logger.h  runtime_info.h  xml_parser.h
src/linux/mobvoi/lg/lg_interface/: action.h  client_info.h  date_time.h  hypothesis.h  lg_result.h  semanticframe.h  session.h  turn.h
src/linux/platform/jpcc/inc/: ISpeechAdapter.h  ISpeechAudioStream.h  ISpeechTTS.h  SpeechErrorID.h  SpeechTrace.h  SpeechTypes.h
src/linux/platform/jpcc/src/: fake_mib3audio_lib.cc
src/linux/src/ecnr/: ecnr.h
src/linux/src/recorder/: events.h  recorder.cc  recorder.h
src/linux/utils/config/: parameter_config.conf  speech_config.h
src/linux/utils/dsp_config/: MFB_2_006_weight_2beam.txt  fix_bf_2_006_weight_2beam.txt  gsc_block_matrix.txt  gsc_fix_weight.txt
src/linux/utils/log/: log.h
src/linux/utils/log/blog/: blog.cc
src/linux/utils/log/log_impl/: log_impl.cc
(+2 files in other folders)
